# tutorials-papers

./: .gitignore  GitDockerPushBuild.sh  README.md  gitDockerPushBuild.sh  gitHttpsSSH.sh  test.sh
Scrapy/: HowToGetData.md
Scrapy/xkcdTestSpider/: postXKCD-.html  scrapy.cfg  xkcd.json
certifications/aws-solution-architect/: notes.org
dataStructures/: .dockerignore  README.md  dataStructure.md  dockerfile  interface.sh  plan.txt  test.sh
dataStructures/demonstrations/: LinkedList.py  dataStrutureApp.py  disjoinSet.py  disjointSet.py  dockerfile  dynamicArray.py  linkedList.py  queues.py  requirements.txt  stack.py  start.sh  test.ipynb  test.txt  test_dataStructures.py  test_dynamicArray.py  test_linkedList.py
docker/: dockerPaper.md
docker-Kubernetes/: dockerPaper.md
docker-Kubernetes/xkcdScraper/: .gitignore
docker/xkcdScraper/: docker-compose.yaml
fullStackWebDev/: vite.md
fullStackWebDev/benAwadProject/: lessons-learned.txt  package.json
fullStackWebDev/graphql/: lessons-learned.txt  ormconfig.json  (+1 more)
learning CSS/: index.html
learningBash/: .gitignore  learningAwk.sh  learningSed.sh  sed-test  sedRandom.txt
learningChinese/: undefined.md
learningGo/: main.go  test.go
learningHaskell/: basic.hs
learningK8s/: README.md  kubectlCmds.md  todo.md
learningRust/: Cargo.toml  notes.md
packaging/nix/python_project/: flake.nix  pyproject.toml  result  shell.nix
packaging/nix/python_project/python_project/: numpy_test.py  shell.nix
pySpark/: lessonsLearned.txt  pySparkPaper.md  pythonInterviewTest.ipynb  test.txt
solidity/: package.json
(+227 files in other folders)
