[tool.poetry]
name = "python-project"
version = "0.1.0"
description = ""
authors = ["vanderscycle <henri-vandersleyen@protonmail.com>"]
readme = "README.md"
packages = [{include = "python_project"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.0"
pandas = "^2.0.3"

[tool.poetry.scripts]
my-script = "python_project.numpy_test:main"
poetry = "poetry.console.application:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
